@@ -1,19 +1,51 @@
 package com.star.bank.service;
 
 import com.star.bank.event.SendRecommendationEvent;
+import com.star.bank.model.dto.DynamicRuleDto;
 import com.star.bank.model.dto.StatsDto;
+import com.star.bank.model.product.Product;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
-import java.util.List;
-import java.util.Map;
-import java.util.UUID;
+import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.stream.Collectors;
 
 @Service
 public class StatsService {
 
     private final Map<UUID, Integer> ruleCounters = new ConcurrentHashMap<>();
+    private final DynamicRuleService dynamicRuleService;
+    private final Set<Product> products;
+
+    @Autowired
+    public StatsService(DynamicRuleService dynamicRuleService, Set<Product> products) {
+        this.dynamicRuleService = dynamicRuleService;
+        this.products = products;
+        initializeRuleCounters();
+    }
+
+    private void initializeRuleCounters() {
+        Set<UUID> allRuleIds = getAllRuleIds();
+        for (UUID ruleId : allRuleIds) {
+            ruleCounters.putIfAbsent(ruleId, 0);
+        }
+    }
+
+    private Set<UUID> getAllRuleIds() {
+        List<DynamicRuleDto> dynamicRules = dynamicRuleService.getDynamicRules();
+        Set<UUID> ruleIds = dynamicRules.stream()
+                .map(DynamicRuleDto::getProductId)
+                .collect(Collectors.toSet());
+
+        if (products != null) {
+            products.stream()
+                    .map(pr -> UUID.fromString(pr.getId()))
+                    .forEach(ruleIds::add);
+        }
+
+        return ruleIds;
+    }
 
     public void incrementProduct(SendRecommendationEvent event) {
         UUID ruleId = UUID.fromString(event.getProduct().getId());
@@ -25,9 +57,15 @@ public class StatsService {
     }
 
     public StatsDto getStats() {
+        Set<UUID> allRuleIds = getAllRuleIds();
+        for (UUID ruleId : allRuleIds) {
+            ruleCounters.putIfAbsent(ruleId, 0);
+        }
+
         List<StatsDto.ProductStat> stats = ruleCounters.entrySet().stream()
                 .map(entry -> new StatsDto.ProductStat(entry.getKey().toString(), entry.getValue()))
-                .toList();
-        return new StatsDto(stats.isEmpty() ? Collections.emptyList() : stats);
+                .collect(Collectors.toList());
+
+        return new StatsDto(stats);
     }
 }
